crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_description.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Id,
            String(
                "volume-description",
            ),
        ),
    ],
    styles: [],
}
