crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_error_message.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: snapshot_attrs(&api.error_message_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "volume-error-message",
            ),
        ),
    ],
    styles: [],
}
