crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_label.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Id,
            String(
                "volume-label",
            ),
        ),
        (
            For,
            String(
                "volume-thumb",
            ),
        ),
    ],
    styles: [],
}
