crates/ars-components/src/input/slider/snapshots/ars_components__input__slider__tests__slider_marker_group.snap
---
source: crates/ars-components/src/input/slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).marker_group_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "marker-group",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "slider",
            ),
        ),
        (
            Role,
            String(
                "presentation",
            ),
        ),
    ],
    styles: [],
}
